syntax = "proto3";



service MasterService {
  rpc createFile(CreateFileReq) returns (CreateFileRes);
}

service ChunkService {
  rpc addMutations(Mutations) returns (Res);
}

message CreateFileReq {
  string fileName = 1;
  int32 fileSize = 2;
}

message CreateFileRes {
  bool isSuccessful = 1;
  repeated Chunk chunks = 2;
}

message Chunk {
  int64 chunkHandle = 1;
  int64 chunkIndex = 2;
  repeated string replicas = 3;
}

enum MutationType {
  Append = 0;
  Write = 1;
}

message Mutation {
  int64 chunkHandle = 1;
  int64 chunkIndex = 2;
  int64 serial = 3;
  MutationType type = 4;
}

message Mutations {
  Mutation mutations = 1;
}
message Res {
  string status = 1;
  string code = 2;
}